apps/staging/jdev-basic/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jdev-web
  namespace: justin
spec:
  selector:
    app: jdev
    role: web
  ports:
    - name: http
      port: 80
      targetPort: gunicorn
